Rename from statistics to graphite
statistics is a bit too general, even though we have more than just
graphite in here it's better. We can split the other things (collectd
etc.) out later

--- a/graphite/templates/collectd/collectd.conf
+++ b/graphite/templates/collectd/collectd.conf
@@ -1,4 +1,4 @@
-{% from 'statistics/map.jinja' import collectd with context %}
+{% from 'graphite/map.jinja' import collectd with context %}
 
 FQDNLookup true
 
