--- a/graphite/templates/statsd/bucky.conf
+++ b/graphite/templates/statsd/bucky.conf
@@ -1,4 +1,4 @@
-{% from "statistics/map.jinja" import bucky with context %}
+{% from "graphite/map.jinja" import bucky with context %}
 
 # Standard debug and log level
 debug = False
