Fixed name change in jinja imports

--- a/metrics/templates/collectd/collectd.conf
+++ b/metrics/templates/collectd/collectd.conf
@@ -1,4 +1,4 @@
-{% from 'graphite/map.jinja' import collectd with context %}
+{% from 'metrics/map.jinja' import collectd with context %}
 
 FQDNLookup true
 
