--- a/metrics/templates/statsd/bucky.conf
+++ b/metrics/templates/statsd/bucky.conf
@@ -1,4 +1,4 @@
-{% from "graphite/map.jinja" import bucky with context %}
+{% from "metrics/map.jinja" import bucky with context %}
 
 # Standard debug and log level
 debug = False
