Added collectd 5.4 updates

--- a/metrics/templates/collectd/collectd.conf
+++ b/metrics/templates/collectd/collectd.conf
@@ -18,18 +18,38 @@ LoadPlugin rrdtool
 LoadPlugin swap
 LoadPlugin users
 
+
+#Hostname {{ hostname.split('.').reverse.join('.') }}
+
 <Plugin syslog>
     LogLevel info
 </Plugin>
 
-<Plugin network>
-    Server "{{ collectd.statsd }}" "25826"
+LoadPlugin "write_graphite"
+<Plugin "write_graphite">
+ <Carbon>
+   Host "{{ graphite.carbon }}"
+   Port "2003"
+   Prefix "metrics."
+   #Postfix ""
+   Protocol "tcp"
+   EscapeCharacter "."
+   SeparateInstances true
+   StoreRates false
+   AlwaysAppendDS false
+ </Carbon>
 </Plugin>
 
-<Plugin rrdtool>
-    DataDir "/var/lib/collectd/rrd"
+
+LoadPlugin statsd
+<Plugin statsd>
+  #Host "::"
+  Port "8125"
+  DeleteSets     true
+  TimerPercentile 90.0
 </Plugin>
 
 Include "/etc/collectd/filters.conf"
 Include "/etc/collectd/thresholds.conf"
+
 
