Added hostname and fixed typos

--- a/metrics/templates/collectd/collectd.conf
+++ b/metrics/templates/collectd/collectd.conf
@@ -23,10 +23,12 @@ LoadPlugin users
     LogLevel info
 </Plugin>
 
+Hostname {{ grains['fqdn'].split('.')|reverse| join('.') }}
+
 LoadPlugin "write_graphite"
 <Plugin "write_graphite">
  <Carbon>
-   Host "{{ graphite.carbon }}"
+   Host "{{ collectd.carbon }}"
    Port "2003"
    Prefix "metrics."
    #Postfix ""
