Missing quotes - hostname field was being ignored

--- a/metrics/templates/collectd/collectd.conf
+++ b/metrics/templates/collectd/collectd.conf
@@ -23,7 +23,7 @@ LoadPlugin users
     LogLevel info
 </Plugin>
 
-Hostname {{ grains['fqdn'].split('.')|reverse| join('.') }}
+Hostname "{{ grains['fqdn'].split('.')|reverse| join('.') }}"
 
 LoadPlugin "write_graphite"
 <Plugin "write_graphite">
