When storing data in graphite, convert counters to rates
With this config flag set to false we end up with CPU jiffies that just
continiously grow.

--- a/metrics/templates/collectd/collectd.conf
+++ b/metrics/templates/collectd/collectd.conf
@@ -34,7 +34,7 @@ LoadPlugin "write_graphite"
    Protocol "tcp"
    EscapeCharacter "."
    SeparateInstances true
-   StoreRates false
+   StoreRates true
    AlwaysAppendDS false
  </Carbon>
 </Plugin>
