--- a/metrics/templates/collectd/collectd.conf
+++ b/metrics/templates/collectd/collectd.conf
@@ -16,6 +16,7 @@ LoadPlugin network
 LoadPlugin processes
 LoadPlugin swap
 LoadPlugin users
+LoadPlugin tcpconns
 
 
 <Plugin syslog>
@@ -47,6 +48,7 @@ LoadPlugin statsd
   DeleteSets     true
   TimerPercentile 90.0
 </Plugin>
+
 
 Include "/etc/collectd/filters.conf"
 Include "/etc/collectd/thresholds.conf"
