fix graphite 1st start issue

--- a/metrics/files/graphite/carbon.conf
+++ b/metrics/files/graphite/carbon.conf
@@ -10,4 +10,5 @@ chdir /srv/graphite
 exec /srv/graphite/bin/carbon-cache.py --debug start >>/var/log/graphite/carbon-supervisor.out 2>>/var/log/graphite/carbon-supervisor.err
 
 ## Try to restart up to 10 times within 5 min:
+respawn
 respawn limit 10 300
