a reasonable default strategy

--- a/metrics/files/graphite/conf/storage-schemas.conf
+++ b/metrics/files/graphite/conf/storage-schemas.conf
@@ -7,10 +7,12 @@
 
 # Carbon's internal metrics. This entry should match what is specified in
 # CARBON_METRIC_PREFIX and CARBON_METRIC_INTERVAL settings
-[carbon]
-pattern = ^carbon\.
-retentions = 60:90d
+#[carbon]
+#pattern = ^carbon\.
+#retentions = 60s:90d
 
-[default_1min_for_1day]
+# a reasonable default strategy
+[default]
 pattern = .*
-retentions = 60s:1d
+retentions = 5s:1h,1m:1d,5m:7d,30m:30d,1h:1y
+
