--- a/metrics/files/graphite/conf/carbon.conf
+++ b/metrics/files/graphite/conf/carbon.conf
@@ -164,7 +164,7 @@ WHISPER_FALLOCATE_CREATE = True
 # metricsReceived) with the top level prefix of 'carbon' at an interval of 60
 # seconds. Set CARBON_METRIC_INTERVAL to 0 to disable instrumentation
 # CARBON_METRIC_PREFIX = carbon
-# CARBON_METRIC_INTERVAL = 60
+CARBON_METRIC_INTERVAL = 10
 
 # Enable AMQP if you want to receve metrics using an amqp broker
 # ENABLE_AMQP = False
