--- a/metrics/files/graphite/conf/carbon.conf
+++ b/metrics/files/graphite/conf/carbon.conf
@@ -281,7 +281,7 @@ USE_FLOW_CONTROL = True
 # metricsReceived) with the top level prefix of 'carbon' at an interval of 60
 # seconds. Set CARBON_METRIC_INTERVAL to 0 to disable instrumentation
 # CARBON_METRIC_PREFIX = carbon
-# CARBON_METRIC_INTERVAL = 60
+CARBON_METRIC_INTERVAL = 10
 
 
 [aggregator]
@@ -356,4 +356,4 @@ MAX_AGGREGATION_INTERVALS = 5
 # metricsReceived) with the top level prefix of 'carbon' at an interval of 60
 # seconds. Set CARBON_METRIC_INTERVAL to 0 to disable instrumentation
 # CARBON_METRIC_PREFIX = carbon
-# CARBON_METRIC_INTERVAL = 60
+CARBON_METRIC_INTERVAL = 10
