--- a/metrics/files/graphite/conf/storage-schemas.conf
+++ b/metrics/files/graphite/conf/storage-schemas.conf
@@ -9,7 +9,7 @@
 # CARBON_METRIC_PREFIX and CARBON_METRIC_INTERVAL settings
 #[carbon]
 #pattern = ^carbon\.
-#retentions = 60s:90d
+#retentions = 10s:4h,1m:1d,5m:7d,30m:30d,1h:1y
 
 # a reasonable default strategy
 [default]
