Add auto-resizing of whisper dbs
Add a wrapper around contrib/whisper-auto-resize.py to check for the
need to resize our whisper databases -- basically if the configuration
has changed, call whisper-auto-resize.py before restarting carbon.

This naturally will slow the start-up of carbon in the cases where we
have made changes, but it does ensure that we never write to the wrong
format whisper file.

--- a/metrics/files/graphite/carbon.conf
+++ b/metrics/files/graphite/carbon.conf
@@ -4,9 +4,14 @@ description "carbon daemon"
 
 start on (local-filesystems and net-device-up IFACE!=lo)
 
-env PATH=/usr/local/bin/:/usr/local/sbin:/bin:/usr/sbin:/usr/bin:/sbin
+env PATH=/srv/graphite/virtualenv/bin:/usr/local/bin/:/usr/local/sbin:/bin:/usr/sbin:/usr/bin:/sbin
 setuid graphite
 chdir /srv/graphite
+
+pre-start script
+  /srv/graphite/bin/update_whisper_files_if_config_changed
+end script
+
 exec /srv/graphite/bin/carbon-cache.py --debug start >>/var/log/graphite/carbon-supervisor.out 2>>/var/log/graphite/carbon-supervisor.err
 
 ## Try to restart up to 10 times within 5 min:
