Allow prefix to be set

--- a/metrics/templates/collectd/collectd.conf
+++ b/metrics/templates/collectd/collectd.conf
@@ -36,10 +36,14 @@ LoadPlugin "write_graphite"
  <Carbon>
    Host "{{ collectd.carbon }}"
    Port "2003"
+{%- if collectd.prefix %}
+   Prefix "{{ collectd.prefix }}"
+{%- else %}
    Prefix "metrics."
+   EscapeCharacter "."
+{%- endif %}
    #Postfix ""
    Protocol "tcp"
-   EscapeCharacter "."
    SeparateInstances true
    StoreRates true
    AlwaysAppendDS false
