Add other statsd timers, and associated carbon aggregation policies

--- a/metrics/files/graphite/conf/storage-aggregation.conf
+++ b/metrics/files/graphite/conf/storage-aggregation.conf
@@ -26,6 +26,36 @@ pattern = \.count$
 xFilesFactor = 0
 aggregationMethod = sum
 
+[collectd-statsd-average]
+pattern = -average$
+xFilesFactor = 0.1
+aggregationMethod = average
+
+[collectd-statsd-lower]
+pattern = -lower$
+xFilesFactor = 0.1
+aggregationMethod = min
+
+[collectd-statsd-upper]
+pattern = -upper$
+xFilesFactor = 0.1
+aggregationMethod = max
+
+[collectd-statsd-sum]
+pattern = -sum$
+xFilesFactor = 0
+aggregationMethod = sum
+
+[collectd-statsd-percentile]
+pattern = -percentile-\d+\.\d+$
+xFilesFactor = 0.1
+aggregationMethod = average
+
+[collectd-statsd-count]
+pattern = -count$
+xFilesFactor = 0
+aggregationMethod = sum
+
 [default_average]
 pattern = .*
 xFilesFactor = 0.0
