--- a/metrics/templates/collectd/collectd.conf
+++ b/metrics/templates/collectd/collectd.conf
@@ -48,6 +48,9 @@ LoadPlugin statsd
   DeleteSets     true
   TimerPercentile 90.0
   TimerCount true
+  TimerUpper true
+  TimerLower true
+  TimerSum true
 </Plugin>
 
 
