urgent fix for carbon bootstrap
/srv/graphite/bin/update_whisper_files_if_config_changed fails on fresh system

--- a/metrics/files/graphite/carbon.conf
+++ b/metrics/files/graphite/carbon.conf
@@ -9,6 +9,7 @@ setuid graphite
 chdir /srv/graphite
 
 pre-start script
+  mkdir -p /srv/graphite/storage/whisper
   /srv/graphite/bin/update_whisper_files_if_config_changed
 end script
 
