Aggregate only collectd's statsd timers in this manner

--- a/metrics/files/graphite/conf/storage-aggregation.conf
+++ b/metrics/files/graphite/conf/storage-aggregation.conf
@@ -31,28 +31,32 @@ pattern = -average$
 xFilesFactor = 0.1
 aggregationMethod = average
 
+# Example of metrics created by the statsd plugin to collectd with a timer:
+#
+# Given a $statsd.timing("pdf.generate") it will generate this
+#   metrics.civilclaims.demo.ac-front.statsd.latency.pdf.generate-average
 [collectd-statsd-lower]
-pattern = -lower$
+pattern = \.statsd\.latency\..*-lower$
 xFilesFactor = 0.1
 aggregationMethod = min
 
 [collectd-statsd-upper]
-pattern = -upper$
+pattern = \.statsd\.latency\..*-upper$
 xFilesFactor = 0.1
 aggregationMethod = max
 
 [collectd-statsd-sum]
-pattern = -sum$
+pattern = -\.statsd\.latency\..*sum$
 xFilesFactor = 0
 aggregationMethod = sum
 
 [collectd-statsd-percentile]
-pattern = -percentile-\d+\.\d+$
+pattern = \.statsd\.latency\..*-percentile-\d+$
 xFilesFactor = 0.1
 aggregationMethod = average
 
 [collectd-statsd-count]
-pattern = -count$
+pattern = \.statsd\.latency\..*-count$
 xFilesFactor = 0
 aggregationMethod = sum
 
