enable collectd ntp plugin

--- a/metrics/templates/collectd/collectd.conf
+++ b/metrics/templates/collectd/collectd.conf
@@ -17,7 +17,13 @@ LoadPlugin processes
 LoadPlugin swap
 LoadPlugin users
 LoadPlugin tcpconns
+LoadPlugin ntpd
 
+<Plugin "ntpd">
+  Host "localhost"
+  Port "123"
+  ReverseLookups false
+</Plugin>
 
 <Plugin syslog>
     LogLevel info
