convert to 14.04 packages, git mirrors and prebuild packages

--- a/metrics/files/graphite/graphite-make-dirs.conf
+++ b/metrics/files/graphite/graphite-make-dirs.conf
@@ -12,5 +12,5 @@ start on (starting graphite)
 task
 
 script
-  install -d -m 2755 -o graphite -g graphite /var/run/graphite
+  install -d -m 2755 -o _graphite -g _graphite /var/run/graphite
 end script
