--- a/metrics/files/graphite/graphite.conf
+++ b/metrics/files/graphite/graphite.conf
@@ -5,9 +5,14 @@ description "graphite daemon"
 start on (local-filesystems and net-device-up IFACE!=lo)
 
 env PATH=/usr/local/bin/:/usr/local/sbin:/bin:/usr/sbin:/usr/bin:/sbin
-setuid graphite
-chdir /srv/graphite/application/current
-exec /srv/graphite/virtualenv/bin/gunicorn graphite.wsgi:application -b unix:///var/run/graphite/graphite.sock >>/var/log/graphite/graphite-supervisor.out 2>>/var/log/graphite/graphite-supervisor.err
+setuid _graphite
+
+chdir /usr/share/graphite-web
+
+#let's ensure we have some db (note it requires locking if used in cluster mode)
+exec graphite-manage syncdb --noinput
+
+exec gunicorn wsgi:application -b unix:///var/run/graphite/graphite.sock
 
 ## Try to restart up to 10 times within 5 min:
 respawn
