--- a/metrics/templates/graphite/carbon/carbon.conf
+++ b/metrics/templates/graphite/carbon/carbon.conf
@@ -1,3 +1,4 @@
+{% from 'metrics/map.jinja' import graphite with context %}
 [cache]
 # Configure carbon directories.
 #
@@ -14,21 +15,13 @@
 # To change other directory paths, add settings to this file. The following
 # configuration variables are available with these default values:
 #
-#   STORAGE_DIR    = $GRAPHITE_STORAGE_DIR
-#   LOCAL_DATA_DIR = STORAGE_DIR/whisper/
-#   WHITELISTS_DIR = STORAGE_DIR/lists/
-#   CONF_DIR       = STORAGE_DIR/conf/
-#   LOG_DIR        = STORAGE_DIR/log/
-#   PID_DIR        = STORAGE_DIR/
-#
-# For FHS style directory structures, use:
-#
-#   STORAGE_DIR    = /var/lib/carbon/
-#   CONF_DIR       = /etc/carbon/
-#   LOG_DIR        = /var/log/carbon/
-#   PID_DIR        = /var/run/
-#
-#LOCAL_DATA_DIR = /opt/graphite/storage/whisper/
+
+STORAGE_DIR    = {{graphite.data}}
+CONF_DIR       = /etc/carbon/
+LOG_DIR        = /var/log/carbon/
+PID_DIR        = /var/run/
+
+LOCAL_DATA_DIR = {{graphite.data}}/whisper/
 
 # Enable daily log rotation. If disabled, a kill -HUP can be used after a manual rotate
 ENABLE_LOGROTATION = True
@@ -36,7 +29,7 @@ ENABLE_LOGROTATION = True
 # Specify the user to drop privileges to
 # If this is blank carbon runs as the user that invokes it
 # This user must have write access to the local data directory
-USER =
+USER = _graphite
 #
 # NOTE: The above settings must be set under [relay] and [aggregator]
 #       to take effect for those daemons as well
