Packaged version of collectd uses an include dir

--- a/metrics/templates/collectd/collectd.conf
+++ b/metrics/templates/collectd/collectd.conf
@@ -61,7 +61,12 @@ LoadPlugin statsd
 </Plugin>
 
 
-Include "/etc/collectd/filters.conf"
-Include "/etc/collectd/thresholds.conf"
+{% if collectd.revision == '5.4.0-ppa1~precise1' %}
+  Include "/etc/collectd/filters.conf"
+  Include "/etc/collectd/thresholds.conf"
+{% else %}
+<Include "/etc/collectd/collectd.conf.d">
+  Filter "*.conf"
+</Include>
 
-
+{% end %}
