use collectd.conf.d

--- a/metrics/templates/collectd/collectd.conf
+++ b/metrics/templates/collectd/collectd.conf
@@ -61,7 +61,8 @@ LoadPlugin statsd
 </Plugin>
 
 
-Include "/etc/collectd/filters.conf"
-Include "/etc/collectd/thresholds.conf"
+<Include "/etc/collectd/collectd.conf.d">
+  Filter "*.conf"
+</Include>
 
 
