--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -6,7 +6,16 @@ provisioner:
   state_top:
     base:
       '*':
-        - metrics
+        - metrics.server
+        - metrics.client
+  pillars:
+    top.sls:
+      base:
+        '*':
+          - testpillar
+    testpillar.sls:
+      collectd:
+        carbon: localhost
   omnibus_cachier: true
 
 platforms:
