Allow specification of graphite.data_dir
Previously we were hardcoded to use /srv/graphite/storage, which can
wind up filling the root fs.

Allow relocation to whereever, but this ideally should be /data/graphite
for consistency.

NB: this does not handle migration of your data from the old to the new location.
    See UPGRADING.md for instructions on how to do this.

--- a/metrics/files/graphite/carbon.conf
+++ b/metrics/files/graphite/carbon.conf
@@ -1,3 +1,4 @@
+{% from 'metrics/map.jinja' import graphite with context %}
 author "Ash Berlin"
 
 description "carbon daemon"
@@ -5,12 +6,14 @@ description "carbon daemon"
 start on (local-filesystems and net-device-up IFACE!=lo)
 
 env PATH=/srv/graphite/virtualenv/bin:/usr/local/bin/:/usr/local/sbin:/bin:/usr/sbin:/usr/bin:/sbin
+env GRAPHITE_STORAGE_DIR={{graphite.data_dir}}
+
 setuid graphite
 chdir /srv/graphite
 
 pre-start script
-  mkdir -p /srv/graphite/storage/whisper
-  /srv/graphite/bin/update_whisper_files_if_config_changed
+  mkdir -p {{ graphite.data_dir }}/whisper
+  /srv/graphite/bin/update_whisper_files_if_config_changed {{graphite.data_dir}}
 end script
 
 exec /srv/graphite/bin/carbon-cache.py --debug start >>/var/log/graphite/carbon-supervisor.out 2>>/var/log/graphite/carbon-supervisor.err
