Let's prevent collectd from memory leaking when graphite is down.
Solves #34 by configuring transport between collectd and graphite as UDP. That way metric will be always sent. It won't be buffered within collectd.
It happens for the price of not guaranteeing the delivery.

Long term we should introduce limited buffering within collectd.
See: WriteQueueLengthLimitHigh
At the moment (Collectd 5.4) WriteQueueLengthLimitHigh functionality has not been yet officially released.

See:
write_graphite: Possible memory leak
https://github.com/collectd/collectd/issues/359

Add a limit to the write queue length before dropping packets.
https://github.com/collectd/collectd/pull/280

--- a/metrics/templates/collectd/collectd.conf
+++ b/metrics/templates/collectd/collectd.conf
@@ -42,7 +42,7 @@ LoadPlugin "write_graphite"
    Prefix "metrics."
 {%- endif %}
    #Postfix ""
-   Protocol "tcp"
+   Protocol "udp"
    EscapeCharacter "."
    SeparateInstances true
    StoreRates true
