Fixed statsd upstart deficiencies.Updated Gemfile.Addded tests.
Original upstart file was missing few important bits - such as uid/gid
of spawned process. Furthermore statsd.sls state file was not starting
statsd process properly. Adding tests for statsd setup will prevent this
from going unnoticed.

--- a/metrics/templates/statsd/upstart-statsd.conf
+++ b/metrics/templates/statsd/upstart-statsd.conf
@@ -4,6 +4,9 @@ description "statsd metrics aggregator"
 
 start on (local-filesystems and net-device-up IFACE!=lo)
 
+setuid statsd
+setgid statsd
+
 exec /srv/statsd/virtualenv/bin/bucky /srv/statsd/conf/bucky.conf
 
 ## Try to restart up to 10 times within 5 min:
