--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -34,10 +34,10 @@ platforms:
   - name: aws-ubuntu-12.04
     driver_plugin: ec2
     driver_config:
-      aws_access_key_id: <%= ENV['AWS_ACCESS_KEY'] %>
-      aws_secret_access_key: <%= ENV['AWS_SECRET_KEY'] %>
-      aws_ssh_key_id: <%= ENV['AWS_SSH_KEY_ID'] %>
-      ssh_key: <%= File.expand_path("~/.ssh/#{ENV['AWS_SSH_KEY_ID']}.pem") %>
+      aws_access_key_id: <%= ENV.fetch('AWS_ACCESS_KEY', 'NONE') %>
+      aws_secret_access_key: <%= ENV.fetch('AWS_SECRET_KEY', 'NONE') %>
+      aws_ssh_key_id: <%= ENV.fetch('AWS_SSH_KEY_ID', 'NONE') %>
+      ssh_key: <%= File.expand_path("~/.ssh/#{ENV.fetch('AWS_SSH_KEY_ID', 'NONE')}.pem") %>
       image_id: ami-8e987ef9
       username: ubuntu
       security_group_ids: ["sg-e932d286"]
