Let upstart handle the logging of graphite and carbon daemons.
This likely means that stdout and stderr will be combined but this is a
better approach as it lets upstart handle rotation, (and means we don'g
have 'supervisor' appear in the log filename, though we could have just
renamed that.)

--- a/metrics/files/graphite/carbon.conf
+++ b/metrics/files/graphite/carbon.conf
@@ -16,7 +16,7 @@ pre-start script
   /srv/graphite/bin/update_whisper_files_if_config_changed {{graphite.data_dir}}
 end script
 
-exec /srv/graphite/bin/carbon-cache.py --debug start >>/var/log/graphite/carbon-supervisor.out 2>>/var/log/graphite/carbon-supervisor.err
+exec /srv/graphite/bin/carbon-cache.py --debug
 
 ## Try to restart up to 10 times within 5 min:
 respawn
