--- a/metrics/files/graphite/graphite.conf
+++ b/metrics/files/graphite/graphite.conf
@@ -7,7 +7,7 @@ start on (local-filesystems and net-device-up IFACE!=lo)
 env PATH=/usr/local/bin/:/usr/local/sbin:/bin:/usr/sbin:/usr/bin:/sbin
 setuid graphite
 chdir /srv/graphite/application/current
-exec /srv/graphite/virtualenv/bin/gunicorn graphite.wsgi:application -b unix:///var/run/graphite/graphite.sock >>/var/log/graphite/graphite-supervisor.out 2>>/var/log/graphite/graphite-supervisor.err
+exec /srv/graphite/virtualenv/bin/gunicorn graphite.wsgi:application -b unix:///var/run/graphite/graphite.sock
 
 ## Try to restart up to 10 times within 5 min:
 respawn
